# scenext-mcp

./: .env  .gitignore  Dockerfile  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  PUBLISH_GUIDE.md  PUBLISH_SUCCESS.md  QUICKSTART.md  README.en.md  README.md  README.zh.md  app.py  mcp_config.json  publish.ps1  pyproject.toml  requirements.txt  setup.py  setup_tokens.ps1  smithery.yaml  start.bat  start.ps1  test_server.py
.github/workflows/: ci.yml  publish.yml
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
scenext_mcp/: __init__.py  _version.py  server.py
scenext_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: publish.py  update_and_publish.ps1  update_version.py
tests/: __init__.py  test_basic.py
